--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -105,8 +105,9 @@ footer > button > img {
   width: 20px;
 }
 
-.close-button {
-  position: absolute;
+#close-button {
+  display: none;
+  position: fixed;
   top: 0.5em;
   right: 0.5em;
   color: white;
@@ -115,6 +116,7 @@ footer > button > img {
   outline: none;
   font-size: 3em;
   cursor: pointer;
+  z-index: 100;
 }
 
 .link {
